--- a/QuanLyNhanKhau/nbproject/project.properties
+++ b/QuanLyNhanKhau/nbproject/project.properties
@@ -37,7 +37,6 @@ file.reference.jcalendar-1.2.2.jar=../Lib/jcalendar-1.2.2.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\TNTDT\\Downloads\\jar_files\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-5.1.40-bin.jar=C:\\Users\\TNTDT\\Downloads\\mysql-connector-java-5.1.40\\mysql-connector-java-5.1.40-bin.jar
 file.reference.mysql-connector-java-5.1.40.zip=..\\Lib\\mysql-connector-java-5.1.40.zip
-file.reference.mysql-connector-java-5.1.48-bin.jar=C:\\Users\\TNTDT\\Downloads\\mysql-connector-java-5.1.48-bin.jar
 file.reference.poi-bin-4.1.1-20191023.zip=..\\Lib\\poi-bin-4.1.1-20191023.zip
 includes=**
 jar.compress=false
@@ -47,8 +46,7 @@ javac.classpath=\
     ${file.reference.jcalendar-1.2.2.jar}:\
     ${file.reference.poi-bin-4.1.1-20191023.zip}:\
     ${file.reference.mysql-connector-java-5.1.40-bin.jar}:\
-    ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.mysql-connector-java-5.1.48-bin.jar}
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
